--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"Njabulo",
   "description":"Best whatsapp bot",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://i.imgur.com/8oeKKEc.jpeg",
+  "logo":"https://i.imgur.com/02GMMaE.jpeg",
   "repository":"https://github.com/NjabuloJ/Njabulo-Jb",
   "succes_url":"/",
   "stack":"container",
