--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -10,5 +10,5 @@ OWNER_NAME= "᚛M๏𝓷keℽ D Lบffy᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
-STARTING_BOT_MESSAGE='yes'
+STARTING_BOT_MESSAGE='no'
 ANTI_DELETE_MESSAGE='yes'
